# SW8S-Rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  _config.yml  build.rs  cargojetson.sh  flake.nix  front  index.html  mutex_queue  playstreams.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json  init.sh  postCreate.sh  postStart.sh
.github/: dependabot.yml
.github/workflows/: build-docs.yml  build-graphs.yml  delete-pages.yml  docker-image.yml  docker-publish.yml  rust-blacksmith.yml  rust-clippy.yml  rust-latest.yml  rust.yml
auto_graphing/anyhow/: index.html
auto_graphing/bitflags/: macro.bitflags.html
auto_graphing/dot_generator/: macro.subgraph!.html
auto_graphing/futures_task/: struct.SpawnError.html
auto_graphing/graphviz_rust/: fn.print.html
auto_graphing/into_attr_derive/: derive.IntoAttribute.html
auto_graphing/itertools/: fn.diff_with.html
auto_graphing/libc/: constant.ABMON_8.html  constant.AF_IB.html  constant.ALG_SET_AEAD_AUTHSIZE.html  constant.AT_HWCAP.html  constant.AT_STATX_SYNC_TYPE.html  constant.B921600.html  constant.CAN_SFF_MASK.html  constant.CLD_TRAPPED.html  constant.CLOCK_BOOTTIME.html  constant.CLOCK_PROCESS_CPUTIME_ID.html  constant.CLONE_NEWNS.html  constant.DCCP_SOCKOPT_CHANGE_L.html  constant.EALREADY.html  constant.EBADSLT.html  constant.EFAULT.html  constant.EMLINK.html  constant.ENOTUNIQ.html  constant.EPOLLIN.html  constant.ETH_P_AF_IUCV.html  constant.ETH_P_DNA_RT.html  constant.ETH_P_IPX.html  constant.ETH_P_LOOPBACK.html  constant.ETH_P_WAN_PPP.html  constant.FUTEX_BITSET_MATCH_ANY.html  constant.F_LOCK.html  constant.GENL_ADMIN_PERM.html  constant.GENL_UNS_ADMIN_PERM.html  constant.GLOB_TILDE_CHECK.html  constant.HWTSTAMP_FILTER_PTP_V2_EVENT.html  constant.IFF_NOFILTER.html  constant.IFF_ONE_QUEUE.html  constant.IFLA_GSO_MAX_SIZE.html  constant.IFLA_NET_NS_PID.html  constant.IFLA_STATS64.html  constant.INPCK.html  constant.IPPROTO_ICMP.html  constant.IPPROTO_MPLS.html  constant.IPPROTO_MPTCP.html  constant.IPV6_DONTFRAG.html  constant.IPV6_JOIN_ANYCAST.html  (+158 more)
auto_graphing/lock_api/: struct.MutexGuard.html
auto_graphing/memchr/: fn.memrchr3_iter.html
auto_graphing/mio_serial/: enum.StopBits.html  fn.map_nix_error.html
auto_graphing/opencv/: macro.not_opencv_branch_34.html
auto_graphing/parking_lot/: type.MappedMutexGuard.html
auto_graphing/pest/: enum.Lookahead.html
auto_graphing/rand_chacha/: struct.ChaCha20Core.html
auto_graphing/serialport/: enum.Parity.html  enum.StopBits.html
auto_graphing/signal_hook_registry/: fn.register_sigaction_impl.html  struct.GlobalData.html
auto_graphing/slab/: enum.Entry.html  index.html
auto_graphing/sw8s_rust/: fn.run_mission.html  index.html
auto_graphing/sw8s_rust_lib/: index.html  sidebar-items.js
auto_graphing/toml/: type.Table.html
auto_graphing/toml_edit/: struct.Datetime.html  struct.InlineTable.html
auto_graphing/unicode_ident/: fn.is_xid_continue.html
benches/: model_processing.rs
docs/: index.html
docs/auto_graphing/: settings.html
docs/buoy_and_gate_logic/: src-files.js
docs/compilation_improvements/: crates.js
docs/cuda_speedup/: settings.html
docs/day_1_am_2024/: help.html
docs/day_1_pm_2024_drift_adjust/: src-files.js
docs/day_2_am_2024/: settings.html
docs/day_3_am_2024/: src-files.js
docs/day_4_am_2024/: help.html
docs/day_5_am/: src-files.js
docs/main/: crates.js  help.html  settings.html  src-files.js
docs/mutex_gh_pages/: help.html
docs/pole-logic/: help.html  settings.html
docs/pool-test-3-30/: help.html  settings.html  src-files.js
docs/pool-test-3-30-gate-fix/: help.html  src-files.js
docs/pool_test_2024-06-22/: src-files.js
docs/pool_test_3_9_24_cam/: src-files.js
docs/pool_test_4_13_24/: help.html
docs/pool_test_6_1/: src-files.js
docs/pool_test_6_1_pca/: settings.html
graphs/: index.html
graphs/auto_graphing/: index.html
graphs/day_1_am_2024_camtest/: index.html
graphs/main/: index.html
graphs/pool-test-3-30/: index.html
graphs/pool-test-fix-path/: index.html
graphs/pool_test_2024-06-22/: index.html
graphs/pool_test_3_9_24/: index.html
graphs/pool_test_4_13_24/: index.html
jetson/: Cargo.toml
jetson/src/: main.rs
main/: index.html
main/anyhow/: all.html
main/chrono/: index.html  struct.Duration.html  trait.Timelike.html
main/dot_generator/: macro.node_id.html
main/either/: index.html
main/futures_channel/: all.html
main/futures_io/: index.html
main/futures_task/: index.html  struct.FutureObj.html
main/graphviz_rust/: index.html
main/indexmap/: enum.TryReserveErrorKind.html
main/into_attr_derive/: fn.impl_into_attr_macro.html
main/libc/: constant.ABDAY_5.html  constant.AFS_SUPER_MAGIC.html  constant.AF_RDS.html  constant.ALG_SET_IV.html  constant.ALG_SET_KEY.html  constant.AT_PLATFORM.html  constant.B9600.html  constant.CAN_NPROTO.html  constant.CAN_RAW.html  constant.CLD_CONTINUED.html  constant.CLONE_NEWIPC.html  constant.CR3.html  constant.CRNCYSTR.html  constant.CTRL_ATTR_MAXATTR.html  constant.DCCP_SOCKOPT_CCID_RX_INFO.html  constant.DCCP_SOCKOPT_CHANGE_R.html  constant.DCCP_SOCKOPT_PACKET_SIZE.html  constant.DCCP_SOCKOPT_TX_CCID.html  constant.EAGAIN.html  constant.EAI_SOCKTYPE.html  constant.EFBIG.html  constant.EFD_CLOEXEC.html  constant.ENOTRECOVERABLE.html  constant.ENOTSUP.html  constant.ERFKILL.html  constant.ESHUTDOWN.html  constant.ETH_P_8021AD.html  constant.ETH_P_ALL.html  constant.ETH_P_AX25.html  constant.ETH_P_DSA.html  constant.ETH_P_QINQ2.html  constant.FAN_MARK_ONLYDIR.html  constant.FUTEXFS_SUPER_MAGIC.html  constant.FUTEX_WAIT.html  constant.F_SEAL_WRITE.html  constant.F_SETFL.html  constant.F_SETLK.html  constant.F_WRLCK.html  constant.HUGETLB_FLAG_ENCODE_MASK.html  constant.HUPCL.html  (+133 more)
main/lock_api/: struct.GuardNoSend.html  struct.RwLockReadGuard.html  trait.RawMutexTimed.html  trait.RawRwLockUpgradeFair.html
main/log/: constant.MAX_LEVEL_INNER.html  (+3 more)
scripts/: seawolf  seawolf.sh
src/: config.rs  graph_main.rs  lib.rs  main.rs
util/: Dockerfile  bottom.sh  crossbuild  front.sh  playStream.sh  push
(+409573 files in other folders)
