[package]
name = "sw8s_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "sw8s_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sw8s_rust_lib"
path = "src/lib.rs"

[[bin]]
name = "sw8s_rust"
path = "src/main.rs"

[[bin]]
name = "sw8s_rust_graphs"
path = "src/graph_main.rs"
required-features = ["graphing"]

[features]
default = []
logging = []
#unblocked_logging = ["logging"]
cuda = ["dep:cc"]
cuda_f16 = ["cuda"]
quantize_i8 = []
graphing = ["dep:graphviz-rust", "dep:quote", "dep:syn", "dep:proc-macro2", "dep:paste"]
networked_testing = []

[dependencies]
opencv = { version = "0.92.0", default-features = false, features = ["dnn", "imgcodecs", "imgproc", "videoio"] } # Vision processing
tokio-serial = "5.4.1" # Async serial comms
tokio = { version = "1.38.0", features = ["full"] } # Async runtime
anyhow = "1.0.86" # Error handling
itertools = "0.13.0" # Enhance iterators
num-traits = "0.2.19" # Numeric generics
derive-getters = "0.4.0" # Getter macro
async-trait = "0.1.80" # Async fns in trait definitions
futures = { version = "0.3.30", default-features = false, features = ["std"] }# Futures utilities
toml = "0.8.14" # Configuration file
serde = { version = "1.0.203", features = ["derive"] } # Config serial handling
bytes = "1.6.0" # Byte buffering
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] } # Unique IDs
graphviz-rust = { version = "0.9.0", optional = true } # Drawing graphs
paste = { version = "1.0.15", optional = true } # Concat identifiers
chrono = "0.4.38"
reqwest = { version = "0.12.3", optional = true } # Downloading godot sim

[build-dependencies]
quote = { version = "1.0.36", optional = true }
syn = { version = "2.0.66", features = ["full", "fold"], optional = true }
proc-macro2 = { version = "1.0.85", optional = true }
cc = { version = "1.0.99", optional = true }

[dev-dependencies]
assert_approx_eq = "1.1.0" # Floating point eq
criterion = "0.5.1" # Benchmarking

[profile.bench]
debug = true

[[bench]]
name = "model_processing"
harness = false

[target.'cfg(target_os = "linux")'.dev-dependencies]
flate2 = "1.0.30" # Decompressing gz
tar = "0.4.40" # Unpacking tar

[target.'cfg(not(target_os = "linux"))'.dev-dependencies]
zip-extract = "0.1.3" # Decompressing zip
