[package]
name = "sw8s_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "sw8s_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sw8s_rust_lib"
path = "src/lib.rs"

[[bin]]
name = "sw8s_rust"
path = "src/main.rs"

[[bin]]
name = "sw8s_rust_graphs"
path = "src/graph_main.rs"
required-features = ["graphing"]

[features]
default = []
logging = []
#unblocked_logging = ["logging"]
cuda = ["dep:cc"]
cuda_f16 = ["cuda"]
graphing = ["dep:graphviz-rust", "dep:quote", "dep:syn", "dep:proc-macro2", "dep:paste"]
networked_testing = []

[dependencies]
opencv = { version = "0.92.2", default-features = false, features = ["dnn", "imgcodecs", "imgproc", "videoio"] } # Vision processing
tokio-serial = "5.4.1" # Async serial comms
tokio = { version = "1.40.0", features = ["full"] } # Async runtime
anyhow = "1.0.86" # Error handling
itertools = "0.13.0" # Enhance iterators
num-traits = "0.2.19" # Numeric generics
derive-getters = "0.5.0" # Getter macro
futures = { version = "0.3.30", default-features = false, features = ["std"] }# Futures utilities
toml = "0.8.19" # Configuration file
serde = { version = "1.0.209", features = ["derive"] } # Config serial handling
bytes = "1.7.1" # Byte buffering
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] } # Unique IDs
graphviz-rust = { version = "0.9.0", optional = true } # Drawing graphs
paste = { version = "1.0.15", optional = true } # Concat identifiers
chrono = "0.4.38" # Handling times
reqwest = { version = "0.12.7", optional = true } # Downloading godot sim
async-channel = "2.3.1" # Blocking -> Async thread message passing
crossbeam = "0.8.4" # Blocking thread message passing
nonzero = "0.2.0"

[build-dependencies]
quote = { version = "1.0.37", optional = true }
syn = { version = "2.0.77", features = ["full", "fold"], optional = true }
proc-macro2 = { version = "1.0.86", optional = true }
cc = { version = "1.1.15", optional = true }

[dev-dependencies]
assert_approx_eq = "1.1.0" # Floating point eq
criterion = { version = "0.5.1", features = ["async_tokio"] } # Benchmarking
rayon = "1.10.0"

[profile.bench]
debug = true

[[bench]]
name = "model_processing"
harness = false

[target.'cfg(target_os = "linux")'.dev-dependencies]
flate2 = "1.0.33" # Decompressing gz
tar = "0.4.40" # Unpacking tar

[target.'cfg(not(target_os = "linux"))'.dev-dependencies]
zip-extract = "0.1.3" # Decompressing zip
