[package]
name = "sw8s_rust_crossbuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sw8s_rust_crossbuild"
path = "src/main.rs"

[dependencies]
futures-util = "0.3.30"
indicatif = { version = "0.17.7", features = ["tokio"] }
reqwest = { version = "0.11.23", features = ["stream"] }
tar = "0.4.40"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["io", "io-util"] }
walkdir = "2.4.0"
xz = "0.1.0"

[build-dependencies]

[dev-dependencies]

[target.'cfg(target_os = "linux")'.dev-dependencies]

[target.'cfg(not(target_os = "linux"))'.dev-dependencies]
