[package]
name = "sw8s_rust_crossbuild"
version = "0.1.0"
edition = "2021"

[features]
ubuntu = []

[dependencies]
anyhow = "1.0.95"
futures-util = "0.3.30"
indicatif = { version = "0.17.7", features = ["tokio"] }
reqwest = { version = "0.11.23", features = ["stream"] }
serde = { version = "1.0.217", features = ["derive"] }
tar = "0.4.40"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["io", "io-util"] }
toml = "0.8.20"
walkdir = "2.4.0"
which = "6.0.0"
xz = "0.1.0"
